--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <a href="POSMOVIL/index.html">🔎 POS MOVIL</a>
   </div>
   <div class="apps">
-    <a href="POSMOVIL/POSICIONVTA.html">🔎 Trazado de Rutas </a>
+    <a href="POSVTAV2/MAPARUTACORTA.html">🔎 Trazado de Rutas </a>
   </div>
   <div class="apps">
     <a href="POSMOVIL/RETICKES.html">🔎 Retickets </a>
