--- a/POSMOVIL/REGENERALVENTAS.html
+++ b/POSMOVIL/REGENERALVENTAS.html
@@ -6,7 +6,8 @@
   <title>Reportes de Ventas Cortadas</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, collection, getDocs, updateDoc, doc } 
+      from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
@@ -27,19 +28,17 @@
       const snapshot = await getDocs(collection(db, "rutas_venta"));
       let reportes = {};
 
-      snapshot.forEach(doc => {
-        const data = doc.data();
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
         if (data.cortado === true && Array.isArray(data.detalle)) {
-          const fechaVenta = data.fecha ? new Date(data.fecha.seconds * 1000) : doc.createTime.toDate();
+          const fechaVenta = data.fecha ? new Date(data.fecha.seconds * 1000) : docSnap.createTime.toDate();
           const fecha = fechaVenta.toLocaleDateString("es-MX", { day: "numeric", month: "long", year: "numeric" });
           const vendedor = data.usuarioNombre || "SIN NOMBRE";
           const ruta = data.rutaId || "Sin ruta";
 
-          // 🔹 clave: día + vendedor + ruta
           const clave = `${fecha}_${vendedor}_${ruta}`;
-
           if (!reportes[clave]) {
-            reportes[clave] = { fecha, vendedor, ruta, productos: {}, totalGeneral: 0 };
+            reportes[clave] = { id: docSnap.id, fecha, vendedor, ruta, productos: {}, totalGeneral: 0, factura: data.factura || "" };
           }
 
           data.detalle.forEach(item => {
@@ -52,7 +51,6 @@
             if (!reportes[clave].productos[codigo]) {
               reportes[clave].productos[codigo] = { nombre, cantidad: 0, precioUnit, total: 0 };
             }
-
             reportes[clave].productos[codigo].cantidad += cantidad;
             reportes[clave].productos[codigo].total += total;
             reportes[clave].totalGeneral += total;
@@ -74,18 +72,18 @@
         const card = document.createElement("div");
         card.className = "card";
 
-const header = document.createElement("div");
-header.className = "card-header";
-header.innerHTML = `
-  <div class="header-left">
-    <h2>🧾 Reporte ${rep.fecha}</h2>
-    <p><strong>Ruta:</strong> ${rep.ruta} &nbsp; | &nbsp; <strong>Vendedor:</strong> ${rep.vendedor}</p>
-  </div>
-  <div class="header-right">
-    <label>No. Factura:</label>
-    <input type="text" class="factura-input" placeholder="Ingrese número" />
-  </div>
-`;
+        const header = document.createElement("div");
+        header.className = "card-header";
+        header.innerHTML = `
+          <div class="header-left">
+            <h2>🧾 Reporte ${rep.fecha}</h2>
+            <p><strong>Ruta:</strong> ${rep.ruta} &nbsp; | &nbsp; <strong>Vendedor:</strong> ${rep.vendedor}</p>
+          </div>
+          <div class="header-right">
+            <label>No. Factura:</label>
+            <input type="text" class="factura-input" placeholder="Ingrese número" value="${rep.factura}" />
+          </div>
+        `;
 
         const body = document.createElement("div");
         body.className = "card-body";
@@ -126,16 +124,31 @@ header.innerHTML = `
         totalBottom.className = "total-box";
         totalBottom.innerHTML = `<strong>Total General: $${rep.totalGeneral.toFixed(2)}</strong>`;
 
+        const botonGuardar = document.createElement("button");
+        botonGuardar.textContent = "💾 Guardar Factura";
+        botonGuardar.onclick = async () => {
+          const factura = card.querySelector(".factura-input")?.value.trim() || "";
+          if (!factura) return alert("Ingrese un número de factura antes de guardar.");
+          try {
+            await updateDoc(doc(db, "rutas_venta", rep.id), { factura });
+            alert("Número de factura guardado correctamente ✅");
+          } catch (err) {
+            console.error("Error al guardar factura:", err);
+            alert("Error al guardar el número de factura ❌");
+          }
+        };
+
         const botonImprimir = document.createElement("button");
         botonImprimir.textContent = "🖨️ Imprimir";
         botonImprimir.onclick = () => {
-  const factura = card.querySelector(".factura-input")?.value || "";
-  imprimirReporte(tabla.outerHTML, rep, factura);
-};
+          const factura = card.querySelector(".factura-input")?.value || "";
+          imprimirReporte(tabla.outerHTML, rep, factura);
+        };
 
         body.appendChild(totalTop);
         body.appendChild(tabla);
         body.appendChild(totalBottom);
+        body.appendChild(botonGuardar);
         body.appendChild(botonImprimir);
 
         header.onclick = () => {
@@ -148,32 +161,33 @@ header.innerHTML = `
       });
     }
 
-function imprimirReporte(tablaHTML, rep, factura) {
-  const ventana = window.open("", "_blank");
-  ventana.document.write(`
-    <html><head><title>Imprimir Reporte</title>
-    <style>
-      body { font-family: Arial, sans-serif; margin: 20px; color: #111; }
-      h1 { text-align: center; color: #00416A; }
-      p { text-align: center; margin: 5px 0 15px; }
-      table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-      th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-      th { background: #00416A; color: white; }
-      .total { font-weight: bold; text-align: right; margin: 10px 0; }
-    </style>
-    </head><body>
-    <h1>Reporte de Venta ${rep.fecha}</h1>
-    <p><strong>Ruta:</strong> ${rep.ruta} &nbsp; | &nbsp; 
-       <strong>Vendedor:</strong> ${rep.vendedor} &nbsp; | &nbsp;
-       <strong>No. Factura:</strong> ${factura}</p>
-    <div class="total">Total General: $${rep.totalGeneral.toFixed(2)}</div>
-    ${tablaHTML}
-    <div class="total">Total General: $${rep.totalGeneral.toFixed(2)}</div>
-    </body></html>
-  `);
-  ventana.document.close();
-  ventana.print();
-}
+    function imprimirReporte(tablaHTML, rep, factura) {
+      const ventana = window.open("", "_blank");
+      ventana.document.write(`
+        <html><head><title>Imprimir Reporte</title>
+        <style>
+          body { font-family: Arial, sans-serif; margin: 20px; color: #111; }
+          h1 { text-align: center; color: #00416A; }
+          p { text-align: center; margin: 5px 0 15px; }
+          table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+          th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+          th { background: #00416A; color: white; }
+          .total { font-weight: bold; text-align: right; margin: 10px 0; }
+        </style>
+        </head><body>
+        <h1>Reporte de Venta ${rep.fecha}</h1>
+        <p><strong>Ruta:</strong> ${rep.ruta} &nbsp; | &nbsp; 
+           <strong>Vendedor:</strong> ${rep.vendedor} &nbsp; | &nbsp;
+           <strong>No. Factura:</strong> ${factura}</p>
+        <div class="total">Total General: $${rep.totalGeneral.toFixed(2)}</div>
+        ${tablaHTML}
+        <div class="total">Total General: $${rep.totalGeneral.toFixed(2)}</div>
+        </body></html>
+      `);
+      ventana.document.close();
+      ventana.print();
+    }
+
     window.onload = cargarVentas;
   </script>
 
@@ -187,7 +201,8 @@ function imprimirReporte(tablaHTML, rep, factura) {
     }
     .card:hover { box-shadow: 0 8px 18px rgba(0,0,0,0.15); }
     .card-header {
-      background: #00416A; color: #fff; padding: 15px 20px;
+      display: flex; justify-content: space-between; align-items: center;
+      background: #00416A; color: #fff; padding: 15px 20px; flex-wrap: wrap;
     }
     .card-header h2 { margin: 0; font-size: 18px; }
     .card-header p { margin: 5px 0 0; font-size: 14px; color: #dce6f2; }
@@ -196,46 +211,16 @@ function imprimirReporte(tablaHTML, rep, factura) {
     th, td { padding: 8px 10px; border-bottom: 1px solid #ddd; text-align: center; }
     th { background: #003366; color: white; }
     button {
-      display: block; margin: 15px 0 5px auto; padding: 8px 15px;
+      display: block; margin: 10px 0 5px auto; padding: 8px 15px;
       background: #00416A; color: white; border: none; border-radius: 6px;
       cursor: pointer; font-weight: bold;
     }
     button:hover { background: #0a6cb8; }
-    .total-box {
-      text-align: right;
-      font-size: 16px;
-      color: #00416A;
-      margin: 5px 0;
-      font-weight: bold;
+    .total-box { text-align: right; font-size: 16px; color: #00416A; margin: 5px 0; font-weight: bold; }
+    .header-right label { font-size: 13px; margin-right: 6px; color: #dce6f2; }
+    .factura-input {
+      padding: 6px 8px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; width: 140px;
     }
-    .card-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #00416A;
-  color: #fff;
-  padding: 15px 20px;
-  flex-wrap: wrap;
-}
-.header-left {
-  flex: 1 1 60%;
-}
-.header-right {
-  flex: 1 1 30%;
-  text-align: right;
-}
-.header-right label {
-  font-size: 13px;
-  margin-right: 6px;
-  color: #dce6f2;
-}
-.factura-input {
-  padding: 6px 8px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 14px;
-  width: 140px;
-}
   </style>
 </head>
 <body>
